[gd_scene load_steps=2 format=2]

[ext_resource path="res://ScoreBoard.gd" type="Script" id=1]

[node name="ScoreBoard" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 128.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelText" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 8.0
margin_right = 86.0
margin_bottom = 38.0
text = "Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelNumber" type="Label" parent="."]
margin_left = 8.0
margin_top = 32.0
margin_right = 48.0
margin_bottom = 62.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 72.0
margin_right = 92.0
margin_bottom = 102.0
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNumber" type="Label" parent="."]
margin_left = 8.0
margin_top = 96.0
margin_right = 48.0
margin_bottom = 126.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiScoreText" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 136.0
margin_right = 48.0
margin_bottom = 166.0
text = "Hi:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiScoreNumber" type="Label" parent="."]
margin_left = 8.0
margin_top = 160.0
margin_right = 48.0
margin_bottom = 190.0
text = "0"
